--- a/pages/style.css
+++ b/pages/style.css
@@ -161,15 +161,12 @@ body
 }
 .logoDiv
 {
-    display: flex;
-    height: 500px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 500px;
-    border: 10px solid rgb(100, 204, 196);
-    border-radius: 10px;
 }
 .Link
 {
@@ -185,9 +182,9 @@ body
 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 12px;
-    color: rgb(216, 217, 218);
-    border-bottom: 5px solid rgb(254, 246, 224);
-    border-style: double;
+    color: rgb(255, 195, 54);
+    border-bottom: 5px solid rgb(255, 195, 54);
+    border-style:outset;
     border-top: 0px;
     border-right: 0px;
     border-left: 0px;
