--- a/pages/style.css
+++ b/pages/style.css
@@ -137,13 +137,13 @@ body
     opacity: 0;
     transition: all 1s;
     filter: blur(5px);
-    transform: translateY(-100%);
+    /* transform: translateY(100%); */
 }
 .show
 {
     opacity: 1;
     filter: blur(0);
-    transform: translateY(0);
+    /* transform: translateY(0); */
 
 }
 @media (min-width: 1200px){
